[package]
name = "mqtt-controller-client"
version = "0.1.3"
authors = ["Julian Ulrich <vbackup@lujanu.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
# build paho mqtt without ssl support (which is not used currently)
paho-mqtt = { version = "0.7.1", default_features = false, features = ["bundled"] }